# image-dehazing

./: .gitignore  README.md  pyproject.toml
scripts/: download_data.py  make_synthetic.py  setup_sota.sh
src/: io_utils.py  make_figures.py  metrics.py  run_dcp.py  run_sota.py
src/dcp/: __init__.py  atmospheric_light.py  dark_channel.py  dehaze.py  guided_filter.py  transmission.py
src/sota/: __init__.py  dehazeformer_infer.py
